# natural-merge-sort

./: .gitignore  CMakeLists.txt  README.md
include/: readWrite.h  sort.h
src/: main.cpp  readWrite.cpp  readWrite.h  sort.cpp  sort.h
